deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: mydeployment
spec:
    replicas: 3
    strategy:
     type: RollingUpdate
     rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
    selector:
      matchLabels:
         app: facebook
    template:
      metadata:
        labels:
          app: facebook
      spec: 
        containers:
         - image: nginx
           name: mycont
           ports:
             - containerPort: 80
