kubefile.yml
apiVersion: v1
kind: Pod
metadata:
   name: newpod
spec:
   containers:
     - image: nginx
       name: mycont
       ports:
         - containerPort: 80
           hostPort: 80
