nodeselector.yml
apiVersion: v1
kind: Pod
metadata:
   name: mypod1
spec:
   nodeSelector:
        gpu: "true"
   containers:
     - image: httpd
       name: mycont
       ports:
         - containerPort: 80
