clusterIP.yml
apiVersion: v1
kind: Service
metadata:
   name: myservice
   labels: 
     myapp: svc1
spec:
   type: ClusterIP
   ports:
     - port: 80
       targetPort: 80
   selector:
      env: test
