loadBalancer.yml
apiVersion: v1
kind: Service
metadata:
   name: mynodeservice
   labels: 
     myapp: svc2
spec:
   type: LoadBalancer
   ports:
     - port: 80
       targetPort: 80
   selector:
      app: facebook
