nodeport.yml
apiVersion: v1
kind: Service
metadata:
   name: mynodeservice
   labels: 
     myapp: svc2
spec:
   type: NodePort
   ports:
     - port: 80
       targetPort: 80
       nodePort: 31000
   selector:
      app: facebook
